// memory.proto

syntax = "proto3";

option go_package = "internal/proto/memory";

enum UserSubjectRole {
  USER_SUBJECT_ROLE_UNDEFINED = 0;
  USER_SUBJECT_ROLE_OWNER = 1; // can give access to other users + editor rights
  USER_SUBJECT_ROLE_ADMIN = 2; // can give access to other users + editor rights
  USER_SUBJECT_ROLE_EDITOR = 2; // CRUD + viewer rights
  USER_SUBJECT_ROLE_VIEWER = 3; // allows reads when subject is not public
}

enum UserModuleRole {
  USER_MODULE_ROLE_UNDEFINED = 0;
  USER_MODULE_ROLE_OWNER = 1; // can give access to other users + editor rights
  USER_MODULE_ROLE_ADMIN = 2; // can give access to other users + editor rights
  USER_MODULE_ROLE_EDITOR = 3; // CRUD + viewer rights
  USER_MODULE_ROLE_VIEWER = 4; // allows reads when doc is not public
}

enum UploadStatus {
  UPLOAD_STATUS_NOT_STARTED = 0;
  UPLOAD_STATUS_SUCCESS = 1;
  UPLOAD_STATUS_FAILED = 2;
  UPLOAD_STATUS_UPLOADING = 3;
  UPLOAD_STATUS_PENDING_APPROVAL = 4;
  UPLOAD_STATUS_INSERTING = 5;
}

enum QuestionType {
  QUESTION_TYPE_UNDEFINED = 0;
  QUESTION_TYPE_MCQ = 1;
  QUESTION_TYPE_MULTI_ANSWER_MCQ= 2;
  QUESTION_TYPE_SHORT_ANSWER = 3;
  QUESTION_TYPE_LONG_ANSWER = 4;
}

enum ORDER_BY_DIRECTION {
  ORDER_BY_DIRECTION_UNDEFINED = 0;
  ORDER_BY_DIRECTION_ASC = 1;
  ORDER_BY_DIRECTION_DESC = 2;
}

enum ORDER_BY_FIELD {
  ORDER_BY_FIELD_UNDEFINED = 0;
  ORDER_BY_FIELD_ID = 1;
  ORDER_BY_FIELD_TITLE = 2;
  ORDER_BY_FIELD_CREATED_TIME = 3;
  ORDER_BY_FIELD_UPDATED_TIME = 4;
}

service SubjectService {
  rpc CreateSubject (CreateSubjectRequest) returns (CreateSubjectResponse);
  rpc GetSubjectById (GetSubjectByIdRequest) returns (GetSubjectByIdResponse);
  rpc GetSubjectsByUserId (GetSubjectsByUserIdRequest) returns (GetSubjectsByUserIdResponse);
  rpc GetSubjectsByNameSearch (GetSubjectsByNameSearchRequest) returns (GetSubjectsByNameSearchResponse);
  rpc UpdateSubject (UpdateSubjectRequest) returns (UpdateSubjectResponse);
  rpc DeleteSubject (DeleteSubjectRequest) returns (DeleteSubjectResponse);
}

service ModuleService {
  rpc CreateModule (CreateModuleRequest) returns (CreateModuleResponse);
  rpc GetModuleById (GetModuleByIdRequest) returns (GetModuleByIdResponse);
  rpc GetModulesBySubjectId (GetModulesBySubjectIdRequest) returns (GetModulesBySubjectIdResponse);
  rpc GetModulesByNameSearch (GetModulesByNameSearchRequest) returns (GetModulesByNameSearchResponse);
  rpc UpdateModule (UpdateModuleRequest) returns (UpdateModuleResponse);
  rpc DeleteModule (DeleteModuleRequest) returns (DeleteModuleResponse);
}

service DocService {
  rpc CreateDoc (CreateDocRequest) returns (CreateDocResponse);
  rpc GetDocById (GetDocByIdRequest) returns (GetDocByIdResponse);
  rpc GetDocsByModuleId (GetDocsByModuleIdRequest) returns (GetDocsByModuleIdResponse);
  rpc GetDocsByNameSearch (GetDocsByNameSearchRequest) returns (GetDocsByNameSearchResponse);
  rpc UpdateDoc (UpdateDocRequest) returns (UpdateDocResponse);
  rpc DeleteDoc (DeleteDocRequest) returns (DeleteDocResponse);
}

service MemoryService {
  rpc CreateMemory (CreateMemoryRequest) returns (CreateMemoryResponse);
  rpc GetMemoryById (GetMemoryByIdRequest) returns (GetMemoryByIdResponse);
  rpc GetMemoriesByDocId (GetMemoriesByDocIdRequest) returns (GetMemoriesByDocIdResponse);
  rpc GetMemoriesByMemoryTitleSearch (GetMemoriesByMemoryTitleSearchRequest) returns (GetMemoriesByMemoryTitleSearchResponse);
  rpc UpdateMemory (UpdateMemoryRequest) returns (UpdateMemoryResponse);
  rpc DeleteMemory (DeleteMemoryRequest) returns (DeleteMemoryResponse);
}

service QuestionService {
  rpc CreateQuestion (CreateQuestionRequest) returns (CreateQuestionResponse);
  rpc GetQuestionById (GetQuestionByIdRequest) returns (GetQuestionByIdResponse);
  rpc GetQuestionsByDocId (GetQuestionsByDocIdRequest) returns (GetQuestionsByDocIdResponse);
  rpc GetQuestionsByQuestionTitleSearch (GetQuestionsByQuestionTitleSearchRequest) returns (GetQuestionsByQuestionTitleSearchResponse);
  rpc UpdateQuestion (UpdateQuestionRequest) returns (UpdateQuestionResponse);
  rpc DeleteQuestion (DeleteQuestionRequest) returns (DeleteQuestionResponse);
}

// Common Type
message MemberAccessKeys {
  uint64 user_id = 1;
  uint64 subject_id = 2;
}

// SubjectService
message CreateSubjectRequest {
  uint64 user_id = 1; // This is the user_id of the user who is creating the subject
  string subject_name = 2;
  string subject_description = 3;
  bool is_public = 4;
}

message CreateSubjectResponse {
}

message GetSubjectByIdRequest {
  uint64 user_id = 1;
  uint64 subject_id = 2;
}

message GetSubjectByIdResponse {
  DBSubject subject = 1;
}

message GetSubjectsByUserIdRequest {
  uint64 user_id = 1;
  uint32 page_number = 2;
  uint32 page_size = 3;
  ORDER_BY_FIELD order_by_field = 4;
  ORDER_BY_DIRECTION order_by_direction = 5;
}

message GetSubjectsByUserIdResponse {
  repeated DBSubject subjects = 1;
}

message GetSubjectsByNameSearchRequest {
  uint64 user_id = 1;
  string search_query = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetSubjectsByNameSearchResponse {
  repeated DBSubject subjects = 1;
}

message UpdateSubjectRequest {
  uint64 user_id = 1;
  uint64 subject_id = 2;
  string subject_name = 3;
  string subject_description = 4;
  bool is_public = 5;
}

message UpdateSubjectResponse {
}

message DeleteSubjectRequest {
  uint64 user_id = 1;
  uint64 subject_id = 2;
}

message DeleteSubjectResponse {
}

// ModuleService
message CreateModuleRequest {
  MemberAccessKeys member_access = 1;
  string module_name = 2;
  string module_description = 3;
  bool is_public = 4;
}

message CreateModuleResponse {
}

message GetModuleByIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 module_id = 2;
}

message GetModuleByIdResponse {
  DBModule module = 1;
}

message GetModulesBySubjectIdRequest {
  MemberAccessKeys member_access = 1;
  uint32 page_number = 2;
  uint32 page_size = 3;
  ORDER_BY_FIELD order_by_field = 4;
  ORDER_BY_DIRECTION order_by_direction = 5;
}

message GetModulesBySubjectIdResponse {
  repeated DBModule modules = 1;
}

message GetModulesByNameSearchRequest {
  MemberAccessKeys member_access = 1;
  string search_query = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetModulesByNameSearchResponse {
  repeated DBModule modules = 1;
}

message UpdateModuleRequest {
  MemberAccessKeys member_access = 1;
  uint64 module_id = 2;
  string module_name = 3;
  string module_description = 4;
  bool is_public = 5;
}

message UpdateModuleResponse {
}

message DeleteModuleRequest {
  MemberAccessKeys member_access = 1;
  uint64 module_id = 2;
}

message DeleteModuleResponse {
}

// DocService
message CreateDocRequest {
  MemberAccessKeys member_access = 1;
  uint64 module_id = 2;
  string doc_name = 3;
  string doc_description = 4;
  string doc_summary = 5;
  UploadStatus upload_status = 6;
  string s3_object_key = 7;
}

message CreateDocResponse {
}

message GetDocByIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
}

message GetDocByIdResponse {
  DBDoc doc = 1;
}

message GetDocsByModuleIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 module_id = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetDocsByModuleIdResponse {
  repeated DBDoc docs = 1;
}

message GetDocsByNameSearchRequest {
  MemberAccessKeys member_access = 1;
  string search_query = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetDocsByNameSearchResponse {
  repeated DBDoc docs = 1;
}

message UpdateDocRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
  string doc_name = 3;
  string doc_description = 4;
  string doc_summary = 5;
  UploadStatus upload_status = 6;
  string s3_object_key = 7;
}

message UpdateDocResponse {
}

message DeleteDocRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
}

message DeleteDocResponse {
}

// MemoryService
message CreateMemoryRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
  string memory_title = 3;
  string memory_content = 4;
}

message CreateMemoryResponse {
}

message GetMemoryByIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 memory_id = 2;
}

message GetMemoryByIdResponse {
  DBMemory memory = 1;
}

message GetMemoriesByDocIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetMemoriesByDocIdResponse {
  repeated DBMemory memories = 1;
}

message GetMemoriesByMemoryTitleSearchRequest {
  MemberAccessKeys member_access = 1;
  string search_query = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetMemoriesByMemoryTitleSearchResponse {
  repeated DBMemory memories = 1;
}

message UpdateMemoryRequest {
  MemberAccessKeys member_access = 1;
  uint64 memory_id = 2;
  string memory_title = 3;
  string memory_content = 4;
}

message UpdateMemoryResponse {
}

message DeleteMemoryRequest {
  MemberAccessKeys member_access = 1;
  uint64 memory_id = 2;
}

message DeleteMemoryResponse {
}

// QuestionService
message CreateQuestionRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
  string question_title = 3;
  bytes question_blob = 4;
  QuestionType question_type = 5;
}

message CreateQuestionResponse {
}

message GetQuestionByIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 question_id = 2;
}

message GetQuestionByIdResponse {
  DBQuestion question = 1;
}

message GetQuestionsByDocIdRequest {
  MemberAccessKeys member_access = 1;
  uint64 doc_id = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetQuestionsByDocIdResponse {
  repeated DBQuestion questions = 1;
}

message GetQuestionsByQuestionTitleSearchRequest {
  MemberAccessKeys member_access = 1;
  string search_query = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
  ORDER_BY_FIELD order_by_field = 5;
  ORDER_BY_DIRECTION order_by_direction = 6;
}

message GetQuestionsByQuestionTitleSearchResponse {
  repeated DBQuestion questions = 1;
}

message UpdateQuestionRequest {
  MemberAccessKeys member_access = 1;
  uint64 question_id = 2;
  string question_title = 3;
  bytes question_blob = 4;
  QuestionType question_type = 5;
}

message UpdateQuestionResponse {
}

message DeleteQuestionRequest {
  MemberAccessKeys member_access = 1;
  uint64 question_id = 2;
}

message DeleteQuestionResponse {
}


// DB Models
message DBUserSubjectMap {
  uint64 user_id = 1;
  uint64 subject_id = 2;
  UserSubjectRole user_subject_role = 3;
  bool is_favourite = 4;
}

message DBSubject {
  uint64 subject_id = 1;
  string subject_name = 2;
  string subject_description = 3;
  bool is_public = 4;
  uint64 created_time = 5;
  uint64 updated_time = 6;
}

message DBSubjectModuleMap {
  uint64 subject_id = 1;
  uint64 module_id = 2;
}

message DBUserModuleMap {
  uint64 user_id = 1;
  uint64 module_id = 2;
  UserModuleRole user_module_role = 3;
  bool is_favourite = 4;
}


message DBModule {
  uint64 module_id = 1;
  string module_name = 2;
  string module_description = 3;
  bool is_public = 4;
  uint64 created_time = 5;
  uint64 updated_time = 6;
}

message DBDoc {
  uint64 doc_id = 1;
  uint64 module_id = 2;
  string doc_name = 3;
  string doc_description = 4;
  string doc_summary = 5;
  UploadStatus upload_status = 6;
  string s3_object_key = 7;
  uint64 created_time = 8;
  uint64 updated_time = 9;
}

message DBMemory {
  uint64 memory_id = 1;
  uint64 doc_id = 2;
  string memory_title = 3;
  string memory_content = 4;
  uint64 created_time = 5;
  uint64 updated_time = 6;
}

message DBQuestion {
  uint64 question_id = 1;
  uint64 doc_id = 2;
  string question_title = 3;
  bytes question_blob = 4;
  QuestionType question_type = 5;
  uint64 created_time = 6;
  uint64 updated_time = 7;
}

// Question Types
message MCQChoice {
  string choice = 1;
  bool is_correct = 2;
}

message MCQQuestion {
  repeated MCQChoice choices = 1;
}

message TextInputQuestion {
  string answer = 1;
}